v3.8.5 (XXXX-XX-XX)
-------------------

* Fixed ES-1025: fixed a performance regression caused by different hash
  calculation for primitive types like `uint64_t` and new the `Identifier`
  wrapper and derived types.

* APM-292: Added new AQL function SHARD_ID.

* APM-78: Added startup security option `--foxx.allow-install-from-remote` to
  allow installing Foxx apps from remote URLs other than Github. The option is
  turned on by default to ensure backwards compatibility with previous version,
  but can be turned off to disallow installation of Foxx apps from arbitrary
  sources.
  Starting with ArangoDB 3.9, the default value for the option will flip from
  `true` to `false`.

* Fixed BTS-693: Sort-limit rule now always ensures proper LIMIT node placement
  to avoid possible invalid results in the fullCount data.

* Updated OpenSSL to 1.1.1m and OpenLDAP to 2.6.0.

* Updated arangosync to 2.7.0.

* Fixed PRESUPP-439: In arangoimport, for CSV and TSV files, it could happen
  that a buffer containing only the header would be sent to the server, and also
  batches would contain the documents equivalent to the csv rows in them, but
  not the header, which should be sent together with the documents.

* Changed various default values for RocksDB to tune operations for different
  typical scenarios like gp2 type volumes and gp3 type volumes and locally
  attached SSDs with RAID0:
  - `--rocksdb.level0-slowdown-trigger` has been decreased from 20 to 16
  - `--rocksdb.level0-stop-trigger` has been increased from 36 to 256
  - `--rocksdb.max-background-jobs` has been increased to the number of cores
    and is no longer limited to 8
  - `--rocksdb.enabled-pipelined-write` is now `true` by default instead of
    `false`
  - `--rocksdb.throttle-frequency` has been decreased from 60000ms down to
    1000ms per iteration, which makes the RocksDB throttle react much quicker
  - `--rocksdb.pending-compactions-slowdown-trigger` has been decreased from 64
    GB down to 8 GB